; ModuleID = '/home/carl/AnghaBench/reactos/sdk/lib/3rdparty/libmpg123/extr_readers.c_io_read.c'
source_filename = "/home/carl/AnghaBench/reactos/sdk/lib/3rdparty/libmpg123/extr_readers.c_io_read.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.reader_data = type { i32, i32 (i32, i8*, i64)*, i32 (i32, i8*, i64)*, i32, i32 }

@READER_HANDLEIO = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.reader_data*, i8*, i64)* @io_read to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @io_read(%struct.reader_data* %0, i8* %1, i64 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.reader_data*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  store %struct.reader_data* %0, %struct.reader_data** %5, align 8
  store i8* %1, i8** %6, align 8
  store i64 %2, i64* %7, align 8
  %8 = load %struct.reader_data*, %struct.reader_data** %5, align 8
  %9 = getelementptr inbounds %struct.reader_data, %struct.reader_data* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 8
  %11 = load i32, i32* @READER_HANDLEIO, align 4
  %12 = and i32 %10, %11
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %14, label %30

14:                                               ; preds = %3
  %15 = load %struct.reader_data*, %struct.reader_data** %5, align 8
  %16 = getelementptr inbounds %struct.reader_data, %struct.reader_data* %15, i32 0, i32 1
  %17 = load i32 (i32, i8*, i64)*, i32 (i32, i8*, i64)** %16, align 8
  %18 = icmp ne i32 (i32, i8*, i64)* %17, null
  br i1 %18, label %19, label %29

19:                                               ; preds = %14
  %20 = load %struct.reader_data*, %struct.reader_data** %5, align 8
  %21 = getelementptr inbounds %struct.reader_data, %struct.reader_data* %20, i32 0, i32 1
  %22 = load i32 (i32, i8*, i64)*, i32 (i32, i8*, i64)** %21, align 8
  %23 = load %struct.reader_data*, %struct.reader_data** %5, align 8
  %24 = getelementptr inbounds %struct.reader_data, %struct.reader_data* %23, i32 0, i32 4
  %25 = load i32, i32* %24, align 4
  %26 = load i8*, i8** %6, align 8
  %27 = load i64, i64* %7, align 8
  %28 = call i32 %22(i32 %25, i8* %26, i64 %27)
  store i32 %28, i32* %4, align 4
  br label %40

29:                                               ; preds = %14
  store i32 -1, i32* %4, align 4
  br label %40

30:                                               ; preds = %3
  %31 = load %struct.reader_data*, %struct.reader_data** %5, align 8
  %32 = getelementptr inbounds %struct.reader_data, %struct.reader_data* %31, i32 0, i32 2
  %33 = load i32 (i32, i8*, i64)*, i32 (i32, i8*, i64)** %32, align 8
  %34 = load %struct.reader_data*, %struct.reader_data** %5, align 8
  %35 = getelementptr inbounds %struct.reader_data, %struct.reader_data* %34, i32 0, i32 3
  %36 = load i32, i32* %35, align 8
  %37 = load i8*, i8** %6, align 8
  %38 = load i64, i64* %7, align 8
  %39 = call i32 %33(i32 %36, i8* %37, i64 %38)
  store i32 %39, i32* %4, align 4
  br label %40

40:                                               ; preds = %30, %29, %19
  %41 = load i32, i32* %4, align 4
  ret i32 %41
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
